Add: expand search year range to 200 years

--- a/remics/force-app/main/default/classes/DeceasedSurvivorDao.cls
+++ b/remics/force-app/main/default/classes/DeceasedSurvivorDao.cls
@@ -34,6 +34,41 @@ public with sharing class DeceasedSurvivorDao {
                     OR (DeceasedDate__c >= :dateList[8] AND DeceasedDate__c <= :dateList[9])
                     OR (DeceasedDate__c >= :dateList[10] AND DeceasedDate__c <= :dateList[11])
                     OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
+                    OR (DeceasedDate__c >= :dateList[14] AND DeceasedDate__c <= :dateList[15])
+                    OR (DeceasedDate__c >= :dateList[16] AND DeceasedDate__c <= :dateList[17])
+                    OR (DeceasedDate__c >= :dateList[18] AND DeceasedDate__c <= :dateList[19])
+                    OR (DeceasedDate__c >= :dateList[20] AND DeceasedDate__c <= :dateList[21])
+                    OR (DeceasedDate__c >= :dateList[22] AND DeceasedDate__c <= :dateList[23])
+                    OR (DeceasedDate__c >= :dateList[24] AND DeceasedDate__c <= :dateList[25])
+                    OR (DeceasedDate__c >= :dateList[26] AND DeceasedDate__c <= :dateList[27])
+                    OR (DeceasedDate__c >= :dateList[28] AND DeceasedDate__c <= :dateList[29])
+                    OR (DeceasedDate__c >= :dateList[30] AND DeceasedDate__c <= :dateList[31])
+                    OR (DeceasedDate__c >= :dateList[32] AND DeceasedDate__c <= :dateList[33])
+                    OR (DeceasedDate__c >= :dateList[34] AND DeceasedDate__c <= :dateList[35])
+                    OR (DeceasedDate__c >= :dateList[36] AND DeceasedDate__c <= :dateList[37])
+                    OR (DeceasedDate__c >= :dateList[38] AND DeceasedDate__c <= :dateList[39])
+                    OR (DeceasedDate__c >= :dateList[40] AND DeceasedDate__c <= :dateList[41])
+                    OR (DeceasedDate__c >= :dateList[42] AND DeceasedDate__c <= :dateList[43])
+                    OR (DeceasedDate__c >= :dateList[44] AND DeceasedDate__c <= :dateList[45])
+                    OR (DeceasedDate__c >= :dateList[46] AND DeceasedDate__c <= :dateList[47])
+                    OR (DeceasedDate__c >= :dateList[48] AND DeceasedDate__c <= :dateList[49])
+                    OR (DeceasedDate__c >= :dateList[50] AND DeceasedDate__c <= :dateList[51])
+                    OR (DeceasedDate__c >= :dateList[52] AND DeceasedDate__c <= :dateList[53])
+                    OR (DeceasedDate__c >= :dateList[54] AND DeceasedDate__c <= :dateList[55])
+                    OR (DeceasedDate__c >= :dateList[56] AND DeceasedDate__c <= :dateList[57])
+                    OR (DeceasedDate__c >= :dateList[58] AND DeceasedDate__c <= :dateList[59])
+                    OR (DeceasedDate__c >= :dateList[60] AND DeceasedDate__c <= :dateList[61])
+                    OR (DeceasedDate__c >= :dateList[62] AND DeceasedDate__c <= :dateList[63])
+                    OR (DeceasedDate__c >= :dateList[64] AND DeceasedDate__c <= :dateList[65])
+                    OR (DeceasedDate__c >= :dateList[66] AND DeceasedDate__c <= :dateList[67])
+                    OR (DeceasedDate__c >= :dateList[68] AND DeceasedDate__c <= :dateList[69])
+                    OR (DeceasedDate__c >= :dateList[70] AND DeceasedDate__c <= :dateList[71])
+                    OR (DeceasedDate__c >= :dateList[72] AND DeceasedDate__c <= :dateList[73])
+                    OR (DeceasedDate__c >= :dateList[74] AND DeceasedDate__c <= :dateList[75])
+                    OR (DeceasedDate__c >= :dateList[76] AND DeceasedDate__c <= :dateList[77])
+                    OR (DeceasedDate__c >= :dateList[78] AND DeceasedDate__c <= :dateList[79])
+                    OR (DeceasedDate__c >= :dateList[80] AND DeceasedDate__c <= :dateList[81])
+                    OR (DeceasedDate__c >= :dateList[82] AND DeceasedDate__c <= :dateList[83])
                     )
                 WITH SECURITY_ENFORCED
             ORDER BY 
@@ -78,6 +113,41 @@ public with sharing class DeceasedSurvivorDao {
                     OR (DeceasedDate__c >= :dateList[8] AND DeceasedDate__c <= :dateList[9])
                     OR (DeceasedDate__c >= :dateList[10] AND DeceasedDate__c <= :dateList[11])
                     OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
+                    OR (DeceasedDate__c >= :dateList[14] AND DeceasedDate__c <= :dateList[15])
+                    OR (DeceasedDate__c >= :dateList[16] AND DeceasedDate__c <= :dateList[17])
+                    OR (DeceasedDate__c >= :dateList[18] AND DeceasedDate__c <= :dateList[19])
+                    OR (DeceasedDate__c >= :dateList[20] AND DeceasedDate__c <= :dateList[21])
+                    OR (DeceasedDate__c >= :dateList[22] AND DeceasedDate__c <= :dateList[23])
+                    OR (DeceasedDate__c >= :dateList[24] AND DeceasedDate__c <= :dateList[25])
+                    OR (DeceasedDate__c >= :dateList[26] AND DeceasedDate__c <= :dateList[27])
+                    OR (DeceasedDate__c >= :dateList[28] AND DeceasedDate__c <= :dateList[29])
+                    OR (DeceasedDate__c >= :dateList[30] AND DeceasedDate__c <= :dateList[31])
+                    OR (DeceasedDate__c >= :dateList[32] AND DeceasedDate__c <= :dateList[33])
+                    OR (DeceasedDate__c >= :dateList[34] AND DeceasedDate__c <= :dateList[35])
+                    OR (DeceasedDate__c >= :dateList[36] AND DeceasedDate__c <= :dateList[37])
+                    OR (DeceasedDate__c >= :dateList[38] AND DeceasedDate__c <= :dateList[39])
+                    OR (DeceasedDate__c >= :dateList[40] AND DeceasedDate__c <= :dateList[41])
+                    OR (DeceasedDate__c >= :dateList[42] AND DeceasedDate__c <= :dateList[43])
+                    OR (DeceasedDate__c >= :dateList[44] AND DeceasedDate__c <= :dateList[45])
+                    OR (DeceasedDate__c >= :dateList[46] AND DeceasedDate__c <= :dateList[47])
+                    OR (DeceasedDate__c >= :dateList[48] AND DeceasedDate__c <= :dateList[49])
+                    OR (DeceasedDate__c >= :dateList[50] AND DeceasedDate__c <= :dateList[51])
+                    OR (DeceasedDate__c >= :dateList[52] AND DeceasedDate__c <= :dateList[53])
+                    OR (DeceasedDate__c >= :dateList[54] AND DeceasedDate__c <= :dateList[55])
+                    OR (DeceasedDate__c >= :dateList[56] AND DeceasedDate__c <= :dateList[57])
+                    OR (DeceasedDate__c >= :dateList[58] AND DeceasedDate__c <= :dateList[59])
+                    OR (DeceasedDate__c >= :dateList[60] AND DeceasedDate__c <= :dateList[61])
+                    OR (DeceasedDate__c >= :dateList[62] AND DeceasedDate__c <= :dateList[63])
+                    OR (DeceasedDate__c >= :dateList[64] AND DeceasedDate__c <= :dateList[65])
+                    OR (DeceasedDate__c >= :dateList[66] AND DeceasedDate__c <= :dateList[67])
+                    OR (DeceasedDate__c >= :dateList[68] AND DeceasedDate__c <= :dateList[69])
+                    OR (DeceasedDate__c >= :dateList[70] AND DeceasedDate__c <= :dateList[71])
+                    OR (DeceasedDate__c >= :dateList[72] AND DeceasedDate__c <= :dateList[73])
+                    OR (DeceasedDate__c >= :dateList[74] AND DeceasedDate__c <= :dateList[75])
+                    OR (DeceasedDate__c >= :dateList[76] AND DeceasedDate__c <= :dateList[77])
+                    OR (DeceasedDate__c >= :dateList[78] AND DeceasedDate__c <= :dateList[79])
+                    OR (DeceasedDate__c >= :dateList[80] AND DeceasedDate__c <= :dateList[81])
+                    OR (DeceasedDate__c >= :dateList[82] AND DeceasedDate__c <= :dateList[83])
                     )
                 WITH SECURITY_ENFORCED
             ORDER BY 
@@ -120,6 +190,41 @@ public with sharing class DeceasedSurvivorDao {
                     OR (DeceasedDate__c >= :dateList[8] AND DeceasedDate__c <= :dateList[9])
                     OR (DeceasedDate__c >= :dateList[10] AND DeceasedDate__c <= :dateList[11])
                     OR (DeceasedDate__c >= :dateList[12] AND DeceasedDate__c <= :dateList[13])
+                    OR (DeceasedDate__c >= :dateList[14] AND DeceasedDate__c <= :dateList[15])
+                    OR (DeceasedDate__c >= :dateList[16] AND DeceasedDate__c <= :dateList[17])
+                    OR (DeceasedDate__c >= :dateList[18] AND DeceasedDate__c <= :dateList[19])
+                    OR (DeceasedDate__c >= :dateList[20] AND DeceasedDate__c <= :dateList[21])
+                    OR (DeceasedDate__c >= :dateList[22] AND DeceasedDate__c <= :dateList[23])
+                    OR (DeceasedDate__c >= :dateList[24] AND DeceasedDate__c <= :dateList[25])
+                    OR (DeceasedDate__c >= :dateList[26] AND DeceasedDate__c <= :dateList[27])
+                    OR (DeceasedDate__c >= :dateList[28] AND DeceasedDate__c <= :dateList[29])
+                    OR (DeceasedDate__c >= :dateList[30] AND DeceasedDate__c <= :dateList[31])
+                    OR (DeceasedDate__c >= :dateList[32] AND DeceasedDate__c <= :dateList[33])
+                    OR (DeceasedDate__c >= :dateList[34] AND DeceasedDate__c <= :dateList[35])
+                    OR (DeceasedDate__c >= :dateList[36] AND DeceasedDate__c <= :dateList[37])
+                    OR (DeceasedDate__c >= :dateList[38] AND DeceasedDate__c <= :dateList[39])
+                    OR (DeceasedDate__c >= :dateList[40] AND DeceasedDate__c <= :dateList[41])
+                    OR (DeceasedDate__c >= :dateList[42] AND DeceasedDate__c <= :dateList[43])
+                    OR (DeceasedDate__c >= :dateList[44] AND DeceasedDate__c <= :dateList[45])
+                    OR (DeceasedDate__c >= :dateList[46] AND DeceasedDate__c <= :dateList[47])
+                    OR (DeceasedDate__c >= :dateList[48] AND DeceasedDate__c <= :dateList[49])
+                    OR (DeceasedDate__c >= :dateList[50] AND DeceasedDate__c <= :dateList[51])
+                    OR (DeceasedDate__c >= :dateList[52] AND DeceasedDate__c <= :dateList[53])
+                    OR (DeceasedDate__c >= :dateList[54] AND DeceasedDate__c <= :dateList[55])
+                    OR (DeceasedDate__c >= :dateList[56] AND DeceasedDate__c <= :dateList[57])
+                    OR (DeceasedDate__c >= :dateList[58] AND DeceasedDate__c <= :dateList[59])
+                    OR (DeceasedDate__c >= :dateList[60] AND DeceasedDate__c <= :dateList[61])
+                    OR (DeceasedDate__c >= :dateList[62] AND DeceasedDate__c <= :dateList[63])
+                    OR (DeceasedDate__c >= :dateList[64] AND DeceasedDate__c <= :dateList[65])
+                    OR (DeceasedDate__c >= :dateList[66] AND DeceasedDate__c <= :dateList[67])
+                    OR (DeceasedDate__c >= :dateList[68] AND DeceasedDate__c <= :dateList[69])
+                    OR (DeceasedDate__c >= :dateList[70] AND DeceasedDate__c <= :dateList[71])
+                    OR (DeceasedDate__c >= :dateList[72] AND DeceasedDate__c <= :dateList[73])
+                    OR (DeceasedDate__c >= :dateList[74] AND DeceasedDate__c <= :dateList[75])
+                    OR (DeceasedDate__c >= :dateList[76] AND DeceasedDate__c <= :dateList[77])
+                    OR (DeceasedDate__c >= :dateList[78] AND DeceasedDate__c <= :dateList[79])
+                    OR (DeceasedDate__c >= :dateList[80] AND DeceasedDate__c <= :dateList[81])
+                    OR (DeceasedDate__c >= :dateList[82] AND DeceasedDate__c <= :dateList[83])
                     )
                 WITH SECURITY_ENFORCED
             ORDER BY 
