--- a/remics/force-app/main/default/classes/ShotenshaWorshipControllerTest.cls
+++ b/remics/force-app/main/default/classes/ShotenshaWorshipControllerTest.cls
@@ -63,53 +63,66 @@ public with sharing class ShotenshaWorshipControllerTest {
         insert pList;
 
         // Creating a record of dead people
+
+        // [佐藤家/佐藤一郎3]当年度に召天
         Person__c pDeceased3 = pList[3];
         pDeceased3.Deceased__c = true;
-        pDeceased3.DeceasedDate__c = Date.newInstance(2020, 12, 1);
-        pDeceased3.BoneDate__c = Date.newInstance(2020, 12, 1);
+        pDeceased3.DeceasedDate__c = Date.newInstance(2022, 10, 1);
+        pDeceased3.BoneDate__c = Date.newInstance(2022, 10, 1);
         pDeceased3.Remains__c = '有';
         pDeceased3.MainBoneType__c = '本骨';
         pDeceased3.OfficiantPastorName__c = 'その他';
+
+        // [佐藤家/佐藤一郎4]1年前に召天
         Person__c pDeceased4 = pList[4];
         pDeceased4.Deceased__c = true;
-        pDeceased4.DeceasedDate__c = Date.newInstance(2019, 12, 1);
-        pDeceased4.BoneDate__c = Date.newInstance(2019, 12, 1);
+        pDeceased4.DeceasedDate__c = Date.newInstance(2021, 10, 1);
+        pDeceased4.BoneDate__c = Date.newInstance(2021, 10, 1);
         pDeceased4.Remains__c = '有';
         pDeceased4.MainBoneType__c = '本骨';
         pDeceased4.OfficiantPastorName__c = 'その他';
+
+        // [佐藤家/佐藤一郎5]5年前に召天
         Person__c pDeceased5 = pList[5];
         pDeceased5.Deceased__c = true;
-        pDeceased5.DeceasedDate__c = Date.newInstance(2015, 12, 1);
-        pDeceased5.BoneDate__c = Date.newInstance(2015, 12, 1);
+        pDeceased5.DeceasedDate__c = Date.newInstance(2017, 12, 1);
+        pDeceased5.BoneDate__c = Date.newInstance(2017, 12, 1);
         pDeceased5.Remains__c = '無';
         pDeceased5.MainBoneType__c = '本骨';
         pDeceased5.OfficiantPastorName__c = 'その他';
 
+        // [後藤家/後藤真紀子3]10年前に召天
         Person__c pDeceased9 = pList[9];
         pDeceased9.Deceased__c = true;
-        pDeceased9.DeceasedDate__c = Date.newInstance(2010, 12, 1);
-        pDeceased9.BoneDate__c = Date.newInstance(2020, 12, 1);
+        pDeceased9.DeceasedDate__c = Date.newInstance(2012, 12, 1);
+        pDeceased9.BoneDate__c = Date.newInstance(2012, 12, 1);
         pDeceased9.Remains__c = '有';
         pDeceased9.MainBoneType__c = '本骨';
         pDeceased9.OfficiantPastorName__c = 'その他';
+
+        // [後藤家/後藤真紀子4]15年前に召天
         Person__c pDeceased10 = pList[10];
         pDeceased10.Deceased__c = true;
-        pDeceased10.DeceasedDate__c = Date.newInstance(2005, 12, 1);
-        pDeceased10.BoneDate__c = Date.newInstance(2005, 12, 1);
+        pDeceased10.DeceasedDate__c = Date.newInstance(2007, 12, 1);
+        pDeceased10.BoneDate__c = Date.newInstance(2007, 12, 1);
         pDeceased10.Remains__c = '有';
         pDeceased10.MainBoneType__c = '本骨';
         pDeceased10.OfficiantPastorName__c = 'その他';
+
+        // [後藤家/後藤真紀子5]20年前に召天
         Person__c pDeceased11 = pList[11];
         pDeceased11.Deceased__c = true;
-        pDeceased11.DeceasedDate__c = Date.newInstance(2000, 12, 1);
-        pDeceased11.BoneDate__c = Date.newInstance(2000, 12, 1);
+        pDeceased11.DeceasedDate__c = Date.newInstance(2002, 12, 1);
+        pDeceased11.BoneDate__c = Date.newInstance(2002, 12, 1);
         pDeceased11.Remains__c = '無';
         pDeceased11.MainBoneType__c = '本骨';
         pDeceased11.OfficiantPastorName__c = 'その他';
+
+        // [後藤家/後藤真紀子6]25年前に召天
         Person__c pDeceased12 = pList[12];
         pDeceased12.Deceased__c = true;
-        pDeceased12.DeceasedDate__c = Date.newInstance(1995, 12, 1);
-        pDeceased12.BoneDate__c = Date.newInstance(1995, 12, 1);
+        pDeceased12.DeceasedDate__c = Date.newInstance(1997, 12, 1);
+        pDeceased12.BoneDate__c = Date.newInstance(1997, 12, 1);
         pDeceased12.Remains__c = '無';
         pDeceased12.MainBoneType__c = '本骨';
         pDeceased12.OfficiantPastorName__c = 'その他';
@@ -146,22 +159,7 @@ public with sharing class ShotenshaWorshipControllerTest {
 
     @isTest
     static void getSurvivorHouseholdListTest() {
-
-        List<Date> dateList = new List<Date>();
-        dateList.add(Date.newInstance(2020, 1, 1));
-        dateList.add(Date.newInstance(2020, 12, 31));
-        dateList.add(Date.newInstance(2019, 1, 1));
-        dateList.add(Date.newInstance(2019, 12, 31));
-        dateList.add(Date.newInstance(2015, 1, 1));
-        dateList.add(Date.newInstance(2015, 12, 31));
-        dateList.add(Date.newInstance(2010, 1, 1));
-        dateList.add(Date.newInstance(2010, 12, 31));
-        dateList.add(Date.newInstance(2005, 1, 1));
-        dateList.add(Date.newInstance(2005, 12, 31));
-        dateList.add(Date.newInstance(2000, 1, 1));
-        dateList.add(Date.newInstance(2000, 12, 31));
-        dateList.add(Date.newInstance(1995, 1, 1));
-        dateList.add(Date.newInstance(1995, 12, 31));
+        List<Date> dateList = setDateList();
 
         List<Map<String, Object>> dList = ShotenshaWorshipController.getSurvivorHouseholdList(dateList, true);
 
@@ -174,22 +172,7 @@ public with sharing class ShotenshaWorshipControllerTest {
 
     @isTest
     static void createAtenaCsvDataTest() {
-
-        List<Date> dateList = new List<Date>();
-        dateList.add(Date.newInstance(2020, 1, 1));
-        dateList.add(Date.newInstance(2020, 12, 31));
-        dateList.add(Date.newInstance(2019, 1, 1));
-        dateList.add(Date.newInstance(2019, 12, 31));
-        dateList.add(Date.newInstance(2015, 1, 1));
-        dateList.add(Date.newInstance(2015, 12, 31));
-        dateList.add(Date.newInstance(2010, 1, 1));
-        dateList.add(Date.newInstance(2010, 12, 31));
-        dateList.add(Date.newInstance(2005, 1, 1));
-        dateList.add(Date.newInstance(2005, 12, 31));
-        dateList.add(Date.newInstance(2000, 1, 1));
-        dateList.add(Date.newInstance(2000, 12, 31));
-        dateList.add(Date.newInstance(1995, 1, 1));
-        dateList.add(Date.newInstance(1995, 12, 31));
+        List<Date> dateList = setDateList();
 
         List<Map<String, Object>> dList = ShotenshaWorshipController.getSurvivorHouseholdList(dateList, true);
 
@@ -205,51 +188,20 @@ public with sharing class ShotenshaWorshipControllerTest {
 
     @isTest
     static void getDeceasedListTest() {
-
-        List<Date> dateList = new List<Date>();
-        dateList.add(Date.newInstance(2020, 1, 1));
-        dateList.add(Date.newInstance(2020, 12, 31));
-        dateList.add(Date.newInstance(2019, 1, 1));
-        dateList.add(Date.newInstance(2019, 12, 31));
-        dateList.add(Date.newInstance(2015, 1, 1));
-        dateList.add(Date.newInstance(2015, 12, 31));
-        dateList.add(Date.newInstance(2010, 1, 1));
-        dateList.add(Date.newInstance(2010, 12, 31));
-        dateList.add(Date.newInstance(2005, 1, 1));
-        dateList.add(Date.newInstance(2005, 12, 31));
-        dateList.add(Date.newInstance(2000, 1, 1));
-        dateList.add(Date.newInstance(2000, 12, 31));
-        dateList.add(Date.newInstance(1995, 1, 1));
-        dateList.add(Date.newInstance(1995, 12, 31));
+        List<Date> dateList = setDateList();
 
         List<Map<String, Object>> dList = ShotenshaWorshipController.getDeceasedList(dateList, true);
 
         Test.startTest();
         System.assertEquals(21, dList.size(), 'ShotenshaWorshipController.getDeceasedList Error');
-        System.assertEquals('当年,現住陪餐会員,5003,佐藤一郎3,Tue Dec 01 00:00:00 GMT 2020,Tue Dec 01 00:00:00 GMT 2020,有,佐藤一郎0,5000,,希望有,1070052,東京都港区赤坂1-2-3', String.join(dList[0].values(), ','), 'ShotenshaWorshipController.getDeceasedList Error');
-        System.assertEquals('当年,現住陪餐会員,5003,佐藤一郎3,Tue Dec 01 00:00:00 GMT 2020,Tue Dec 01 00:00:00 GMT 2020,有,佐藤一郎1,5001,,希望有,1070052,東京都港区赤坂1-2-3', String.join(dList[1].values(), ','), 'ShotenshaWorshipController.getDeceasedList Error');
+        System.assertEquals('当年,現住陪餐会員,5003,佐藤一郎3,Sat Oct 01 00:00:00 GMT 2022,Sat Oct 01 00:00:00 GMT 2022,有,佐藤一郎0,5000,,希望有,1070052,東京都港区赤坂1-2-3', String.join(dList[0].values(), ','), 'ShotenshaWorshipController.getDeceasedList Error');
+        System.assertEquals('当年,現住陪餐会員,5003,佐藤一郎3,Sat Oct 01 00:00:00 GMT 2022,Sat Oct 01 00:00:00 GMT 2022,有,佐藤一郎1,5001,,希望有,1070052,東京都港区赤坂1-2-3', String.join(dList[1].values(), ','), 'ShotenshaWorshipController.getDeceasedList Error');
         Test.stopTest();
     }
 
     @isTest
     static void createDeceasedListCsvDataTest() {
-
-        List<Date> dateList = new List<Date>();
-        dateList.add(Date.newInstance(2020, 1, 1));
-        dateList.add(Date.newInstance(2020, 12, 31));
-        dateList.add(Date.newInstance(2019, 1, 1));
-        dateList.add(Date.newInstance(2019, 12, 31));
-        dateList.add(Date.newInstance(2015, 1, 1));
-        dateList.add(Date.newInstance(2015, 12, 31));
-        dateList.add(Date.newInstance(2010, 1, 1));
-        dateList.add(Date.newInstance(2010, 12, 31));
-        dateList.add(Date.newInstance(2005, 1, 1));
-        dateList.add(Date.newInstance(2005, 12, 31));
-        dateList.add(Date.newInstance(2000, 1, 1));
-        dateList.add(Date.newInstance(2000, 12, 31));
-        dateList.add(Date.newInstance(1995, 1, 1));
-        dateList.add(Date.newInstance(1995, 12, 31));
-
+        List<Date> dateList = setDateList();
         List<Map<String, Object>> dList = ShotenshaWorshipController.getDeceasedList(dateList, true);
 
         ShotenshaWorshipController.createDeceasedListCsvData();
@@ -257,57 +209,14 @@ public with sharing class ShotenshaWorshipControllerTest {
 
         Test.startTest();
         System.assertEquals('召天年,召天者会員区分,召天者原簿番号,召天者名,召天日,納骨日,御遺影有無,遺族名,遺族原簿番号,遺族続柄,遺族召天案内,郵便番号,住所', csvList[0], 'ShotenshaWorshipController.createDeceasedListCsvData Error');
-        System.assertEquals('25年,現住陪餐会員,5003,佐藤一郎3,2020-12-01,2020-12-01,有,佐藤一郎0,5000,,希望有,1070052,東京都港区赤坂1-2-3', csvList[1], 'ShotenshaWorshipController.createDeceasedListCsvData Error');
-        System.assertEquals('25年,現住陪餐会員,5003,佐藤一郎3,2020-12-01,2020-12-01,有,佐藤一郎1,5001,,希望有,1070052,東京都港区赤坂1-2-3', csvList[2], 'ShotenshaWorshipController.createDeceasedListCsvData Error');
+        System.assertEquals('不明,現住陪餐会員,5003,佐藤一郎3,2022-10-01,2022-10-01,有,佐藤一郎0,5000,,希望有,1070052,東京都港区赤坂1-2-3', csvList[1], 'ShotenshaWorshipController.createDeceasedListCsvData Error');
+        System.assertEquals('不明,現住陪餐会員,5003,佐藤一郎3,2022-10-01,2022-10-01,有,佐藤一郎1,5001,,希望有,1070052,東京都港区赤坂1-2-3', csvList[2], 'ShotenshaWorshipController.createDeceasedListCsvData Error');
         Test.stopTest();
     }
 
-    // @isTest
-    // static void getSurvivorListTest() {
-
-    //     List<Date> dateList = new List<Date>();
-    //     dateList.add(Date.newInstance(2020, 1, 1));
-    //     dateList.add(Date.newInstance(2020, 12, 31));
-    //     dateList.add(Date.newInstance(2019, 1, 1));
-    //     dateList.add(Date.newInstance(2019, 12, 31));
-    //     dateList.add(Date.newInstance(2015, 1, 1));
-    //     dateList.add(Date.newInstance(2015, 12, 31));
-    //     dateList.add(Date.newInstance(2010, 1, 1));
-    //     dateList.add(Date.newInstance(2010, 12, 31));
-    //     dateList.add(Date.newInstance(2005, 1, 1));
-    //     dateList.add(Date.newInstance(2005, 12, 31));
-    //     dateList.add(Date.newInstance(2000, 1, 1));
-    //     dateList.add(Date.newInstance(2000, 12, 31));
-    //     dateList.add(Date.newInstance(1995, 1, 1));
-    //     dateList.add(Date.newInstance(1995, 12, 31));
-
-    //     List<Map<String, Object>> dList = ShotenshaWorshipController.getSurvivorList(dateList, true);
-
-    //     Test.startTest();
-    //     System.assertEquals(21, dList.size(), 'ShotenshaWorshipController.getSurvivorList Error');
-    //     System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,5年,現住陪餐会員,5005,佐藤一郎5,Tue Dec 01 00:00:00 GMT 2015,Tue Dec 01 00:00:00 GMT 2015,無', String.join(dList[0].values(), ','), 'ShotenshaWorshipController.getSurvivorList Error');
-    //     System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,当年,現住陪餐会員,5003,佐藤一郎3,Tue Dec 01 00:00:00 GMT 2020,Tue Dec 01 00:00:00 GMT 2020,有', String.join(dList[1].values(), ','), 'ShotenshaWorshipController.getSurvivorList Error');
-    //     Test.stopTest();
-    // }
-
     @isTest
     static void createSurvivorListCsvDataTest() {
-
-        List<Date> dateList = new List<Date>();
-        dateList.add(Date.newInstance(2020, 1, 1));
-        dateList.add(Date.newInstance(2020, 12, 31));
-        dateList.add(Date.newInstance(2019, 1, 1));
-        dateList.add(Date.newInstance(2019, 12, 31));
-        dateList.add(Date.newInstance(2015, 1, 1));
-        dateList.add(Date.newInstance(2015, 12, 31));
-        dateList.add(Date.newInstance(2010, 1, 1));
-        dateList.add(Date.newInstance(2010, 12, 31));
-        dateList.add(Date.newInstance(2005, 1, 1));
-        dateList.add(Date.newInstance(2005, 12, 31));
-        dateList.add(Date.newInstance(2000, 1, 1));
-        dateList.add(Date.newInstance(2000, 12, 31));
-        dateList.add(Date.newInstance(1995, 1, 1));
-        dateList.add(Date.newInstance(1995, 12, 31));
+        List<Date> dateList = setDateList();
 
         List<Map<String, Object>> dList = ShotenshaWorshipController.getSurvivorList(dateList, true);
 
@@ -316,8 +225,28 @@ public with sharing class ShotenshaWorshipControllerTest {
 
         Test.startTest();
         System.assertEquals('遺族原簿番号,遺族名,遺族会員区分,郵便番号,住所,遺族続柄,遺族召天案内,召天年,召天者会員区分,召天者原簿番号,召天者名,召天日,納骨日,御遺影有無', csvList[0], 'ShotenshaWorshipController.createSurvivorListCsvData Error');
-        System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,25年,現住陪餐会員,5003,佐藤一郎3,2020-12-01,2020-12-01,有', csvList[1], 'ShotenshaWorshipController.createSurvivorListCsvData Error');
-        System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,25年,現住陪餐会員,5005,佐藤一郎5,2015-12-01,2015-12-01,無', csvList[2], 'ShotenshaWorshipController.createSurvivorListCsvData Error');
+        System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,不明,現住陪餐会員,5003,佐藤一郎3,2022-10-01,2022-10-01,有', csvList[1], 'ShotenshaWorshipController.createSurvivorListCsvData Error');
+        System.assertEquals('5000,佐藤一郎0,現住陪餐会員,1070052,東京都港区赤坂1-2-3,,希望有,不明,現住陪餐会員,5005,佐藤一郎5,2017-12-01,2017-12-01,無', csvList[2], 'ShotenshaWorshipController.createSurvivorListCsvData Error');
         Test.stopTest();
+    }
+
+    public static List<Date> setDateList(){
+        List<Date> dateList = new List<Date>();
+
+        // 0, 1年目のDateは日付が特殊なので下記For文とは別に作成
+        dateList.add(Date.newInstance(2021, 11, 1));
+        dateList.add(Date.newInstance(2022, 10, 31));
+        dateList.add(Date.newInstance(2020, 11, 1));
+        dateList.add(Date.newInstance(2021, 10, 31));
+
+        // 5年目から200年目まで5年刻みでDateを作成する
+        // ex: 2017, 2012, 2007, ... , 1827, 1822]
+        for(Integer i = 5 ; i <= 200; i = i + 5) {
+            Integer year = 2022 - i;
+            dateList.add(Date.newInstance(year, 1, 1));
+            dateList.add(Date.newInstance(year, 12, 31));
+        }
+
+        return dateList;
     }
 }
